tests/baselines/reference/shadowPrivateMembers.errors.txt
tests/cases/compiler/shadowPrivateMembers.ts(2,7): error TS2415: Class 'derived' incorrectly extends base class 'base'.
  Types have separate declarations of a private property 'n'.


==== tests/cases/compiler/shadowPrivateMembers.ts (1 errors) ====
    class base { private n() {} }
    class derived extends base { private n() {} }
          ~~~~~~~
!!! error TS2415: Class '{|derived|0|}' incorrectly extends base class '{|base|1|}'.
!!! error TS2415:   Types have separate declarations of a private property 'n'.
!!! annotated symbol 0 tests/cases/compiler/shadowPrivateMembers.ts:2:7
!!! annotated symbol 1 tests/cases/compiler/shadowPrivateMembers.ts:1:7
    